[package]
name = "config"
version = "0.1.0"
authors = ["SOFe <sofe2038@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byte-unit = "3.1.1"
getset = "0.1.1"
lazy_static = "1.4.0"
serde = {version = "1.0.110", features = ["derive"]}
serde_str = "0.1.0"
toml = "0.5.6"
